--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 #root {
   width: 100%;
+  height: 90dvh;
+  display: flex;
   margin: 0 auto;
   text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
